# WeightVariationV5

./: platformio.ini
Backend/: Main.py
Backend/src/: SyncTime.py  WiFi.py
SquareLine/: Weight.sll  Weight.spj
SquareLine/assets/: ui_font_ProtestGuerrilla48.fcfg  ui_font_Sarabun28.fcfg
boards/: beenext_7_0ips.json  sunton_s3.json
src/: lv_conf.h  main.cpp
src/custom/: connectRPi.h  events.h  global_variables.h  sd_audio.h
src/custom/pages_onload/: loading_page.h  login_page.h  thickness_page.h  weighing_page.h
src/gui/: gui.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/fonts/: ui_font_ProtestGuerrilla48.c  ui_font_Sarabun28.c  ui_font_Sixtyfour28.c
src/ui/images/: ui_img_1636676910.c  ui_img_206557904.c  ui_img_402937210.c
src/ui/screens/: ui_LoadingPage.c  ui_LoginPage.c  ui_SettingPage.c  ui_SummaryPage.c  ui_TabletCharacteristicsPage.c  ui_ThicknessPage.c  ui_WeighingPage.c
